# pgpatch

./: Cargo.toml  README.md
.github/workflows/: release.yml
examples/: pgpatch.toml
src/: config.rs  diff.rs  emit.rs  lib.rs  main.rs  model.rs  render.rs  tls.rs
src/catalog/: constraints.rs  extensions.rs  functions.rs  indexes.rs  mod.rs  policies.rs  schemas.rs  sequences.rs  tables.rs  triggers.rs  types.rs  views.rs
tests/: emit_indexes_constraints.rs  emit_partitions.rs  emit_tables.rs  emit_triggers_policies_etc.rs  emit_type_reorder.rs  emit_view_topo.rs  emit_views_seq_types.rs
