[package]
name = "pgpatch"
version = "0.0.1"
edition = "2024"
description = "Snapshot and diff PostgreSQL schemas via pg_catalog"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
clap = { version = "4.6", features = ["derive"] }
globset = "0.4"
postgres = "0.19"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
similar = "3.1"
tokio-postgres-rustls = "0.13"
toml = "1.1"
webpki-roots = "1.0"

[profile.release]
lto = "thin"
strip = true
